# presentation-forge

./: .gitignore  LICENSE  README.md
.github/plugin/: plugin.json
docs/: plan.md
skills/image-generator/: SKILL.md  pyproject.toml
skills/image-generator/assets/: env.example
skills/image-generator/assets/examples/: aurora-coffee.yaml  smoke-test.yaml
skills/image-generator/references/: YAML_SCHEMA.md
skills/image-generator/scripts/: run.md
skills/image-generator/src/image_generator/: __init__.py  auth.py  backends.py  cli.py  config.py  prompts.py  runner.py
skills/image-generator/tests/: test_config_and_backends.py
skills/pptx-render/: NOTICE  SKILL.md
skills/presentation-forge/: SKILL.md  pyproject.toml
skills/presentation-forge/assets/examples/example-talk/: images.yaml  selections.json  selections.yaml  slides.md  slides.yaml  story.md  theme.yaml
skills/presentation-forge/references/: SLIDES_FORMAT.md  UPDATE_MODEL.md  WORKFLOW.md
skills/presentation-forge/scripts/: run.md
skills/presentation-forge/src/presentation_forge/: __init__.py  builder.py  cli.py  layouts.py  pptx_render.py  render_adapter.py  slides_parser.py  spec.py  state.py  template_utils.py
skills/presentation-forge/src/presentation_forge/templates/: images.yaml.tmpl  selections.yaml.tmpl  slides.md.tmpl  slides.yaml.tmpl  story.md.tmpl  theme.yaml.tmpl
skills/presentation-forge/tests/: conftest.py  test_builder_integration.py  test_builder_only_and_lock.py  test_render_adapter.py  test_slides_parser.py  test_spec_theme.py  test_template_utils.py  test_yaml_format.py
(+5 files in other folders)
